# os-util

./: CMakeLists.txt  README.md  file.txt
app_IM/: CMakeLists.txt  README.md
app_IM/CommonTools/: README.md
app_IM/CommonTools/SimpleEnc/: SimpleEnc.c  SimpleEnc.h
app_IM/InitAndExit/: exit_application.c  exit_application.h  init_login.c  init_login.h  init_network.c  init_network.h  init_ui.c  init_ui.h
app_IM/SearchContent/: searchcontent.c  searchcontent.h
app_IM/SearchUser/: Generic.h  README.MD  ReadMe.md  TcpSocket.h  modules_pyq.xml
app_IM/SearchUser/AddFriends/: AgreeRequest.c  AgreeRequest.h  FriendRequest.c  FriendRequest.h  ReceiveFriendRequest.c  ReceiveFriendRequest.h  SendRequestResult.c  SendRequestResult.h  UpdataLocalList.c  UpdateLocalList.c  UpdateLocalList.h
app_IM/SearchUser/BrowseFriendList/: GetFriendList.c  GetFriendList.h  PresentFriendList.c  PresentFriendList.h  SendListRequest.c  SendListRequest.h
app_IM/SearchUser/DeleteFriend/: SendDeleteRequest.c  sendDeleteRequest.h
app_IM/SearchUser/FindFriends/: GetInputCond.c  GetInputCond.h  GetResult.c  GetResult.h  PresentResult.c  PresentResult.h  SendData.c  SendData.h
app_IM/SearchUser/ViewProfile/: GetReturnProfile.c  GetReturnProfile.h  SendViewRequest.c  SendViewRequest.h  ViewProfile.c  ViewProfile.h
app_IM/Server_Client/: client.c  client.h  server.c  server.h
app_IM/changepwd/: GetChangePwdRes.c  ParseChangePwdRes.c  ShowChangePwdResp.c  changepwd.h  encNewPwd.c  getNewPwd.c  post.c  showChangePwd.c
app_IM/editprofile/: .getModifyInput.c.swp  .modifyProfile.h.swo  .modifyProfile.h.swp  GetModifyRes.c  ParseModifyRes.c  README.md  ShowModifyResp.c  encModifyInfo.c  getModifyInput.c  modifyProfile.h  post.c  showProfileEdit.c
app_IM/getMessage/: DecMsg.c  RecMsg.c  SaveMsg.c  ShowMsg.c  getMessage.h
app_IM/login/: Decode.c  EncAuthInfo.c  Encode.c  GetAuthRes.c  GetUsrAndPwd.c  ParseAuthRes.c  PostAuthMsg.c  ProcessAuthRes.c  README.md  login.h
app_IM/register/: EncRegisterInfo.c  GetRegisterInfo.c  GetRegisterRes.c  ParseRegisterRes.c  PostRegisterMsg.c  ProcessRegisterRes.c  README.md  ShowRegisterPage.c  register.h
app_IM/sendMessage/: EncData.c  GetUsrMsg.c  PostUsrMsg.cpp  ProcessMsgRes.cpp
app_IM/viewMessage/: view.c  viewMessage.h
app_IM/viewprofile/: GetProfileEnc.c  PkgProfileGetReq.c  Post.c  PostProfileGet.c  PraseProfile.c  ShowProfileView.c  viewprofile.c  viewprofile.h
app_MusicPlayer/: README.md
app_MusicPlayer/classify/: classify.c  classify.h
app_MusicPlayer/search/: search.c  search.h
app_MusicPlayer/user/enc/: Decode.c  Encode.c  enc.h
app_MusicPlayer/user/history/: add_history.h  delete.h  delete_all.h
app_MusicPlayer/user/login/: CheckLoginInfo.c  EncAuthInfo.c  GetUsrAndPwd.c  PostAuthMsg.c  ShowLoginPage.c  ShowUserPage.c  login.h  login.xml
app_MusicPlayer/user/register/: CheckRegister.c  EncRegisterInfo.c  GetRegisterInfo.c  GetRegisterRes.c  ParseRegisterRes.c  (+6 more)
app_Website/: README.md
app_Website/goods_mange/: goods_delisting.c  goods_info_update.c  goods_listing.c  goods_manage.h  goods_price_update.c  goods_search.c
app_Website/member_management/: CheckAccountExist.c  ExeSql.c  GetAccount.c  GetResult.c  SendAccountMsg.c  mem_add.c  mem_delete.c  mem_point.c  mem_search.c  member_management.xml  membermanagement.h
app_Website/pay/: pay.c  pay.h
app_Website/user_register/: CheckRegisterRepeat.c  GetRegisterInfo.c  GetRegisterResult.c  SendRegisterMsg.c  ShowLoginPage.c  ShowRegisterPage.c  user_register.h  user_register.xml
data/: im.xml  player.xml
sendMessage/: GetSendRes.c  sendMessage.h
(+11 files in other folders)
